--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
+    "lucide-react": "^0.488.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-router-dom": "^7.5.0",
-    "tailwindcss": "^4.1.3"
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.3",
+    "tostify": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
