--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,36 +1,24 @@
-#Etapa 1: Build
-FROM node:23-slim AS builder
+ARG NODE_ENV=production
+FROM node:23-slim AS base
 
-# Create and set the working directory
 WORKDIR /usr/src/app
 
-# Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
-
-# Install dependencies
 RUN npm install
-
-# Copy the rest of the application code
 COPY . .
 
-# Compilar el proyecto TypeScript
+# En producción compilamos y usamos solo dist
+FROM base AS build
 RUN npm run build
 
-# Etapa 2: Runtime
-FROM node:23-slim AS runner
+FROM base AS development
+ENV NODE_ENV=development
+CMD ["npm", "run", "dev"]
 
-# Create and set the working directory
+FROM node:23-slim AS production
 WORKDIR /usr/src/app
-
-# Copy only the necessary files from the builder stage
-COPY --from=builder /usr/src/app/dist ./dist
-COPY --from=builder /usr/src/app/package*.json ./
-
-# Install only production dependencies
-RUN npm install --only=production
-
-# Expose the port the app runs on
+COPY --from=build /usr/src/app/dist ./dist
+COPY package*.json ./
+RUN npm install --omit=dev
 EXPOSE 3030
-
-# Start the application
 CMD ["node", "dist/server.js"]
