--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "lucide-react": "^0.488.0",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-router-dom": "^7.5.0",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
