--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "react-hook-form": "^7.55.0",
     "react-router-dom": "^7.5.0",
     "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.17.2",
+    "sweetalert2-react-content": "^5.1.0",
     "tailwindcss": "^4.1.3",
     "tostify": "^0.0.1"
   },
