--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "start": "node dist-server/server.js",
     "dev": "nodemon --exec ts-node server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest --config ./server/test/jest.config.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
