--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,23 +1,26 @@
-ARG NODE_ENV=production
 FROM node:23-slim AS base
 
 WORKDIR /usr/src/app
 
+# Copiar package.json y package-lock.json
 COPY package*.json ./
+
+# En desarrollo, instalar todas las dependencias incluyendo las de dev
+FROM base AS development
 RUN npm install
 COPY . .
-
-# En producción compilamos y usamos solo dist
-FROM base AS build
-RUN npm run build
-
-FROM base AS development
-ENV NODE_ENV=development
 CMD ["npm", "run", "dev"]
 
+# En producción, compilamos la app primero
+FROM base AS build
+RUN npm install
+COPY . .
+RUN npm run build
+
+# Imagen final de producción
 FROM node:23-slim AS production
 WORKDIR /usr/src/app
-COPY --from=build /usr/src/app/dist ./dist
+COPY --from=build /usr/src/app/dist-server ./dist
 COPY package*.json ./
 RUN npm install --omit=dev
 EXPOSE 3030
