--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,10 @@
   "scripts": {
     "start": "node dist-server/server.js",
     "dev": "nodemon --exec ts-node server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
